syntax = "proto3";
package transfer;

option go_package="../transfer";

service Transfer{
  rpc PasswordLogin(LoginReq) returns (LoginRes){}
}

message LoginReq{
  string username = 1;
  string password = 2;
}
message LoginRes{
  string success = 1;
  int32 code = 2;
}